--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.LoginDemoActivity"
+            android:name="cn.edu.sjzc.student.uiFragment.MainTabActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -170,9 +170,9 @@
         <activity
             android:name="cn.edu.sjzc.student.uiActivity.AppStartActivicy"
             android:screenOrientation="portrait" />
-        <activity
-            android:name="cn.edu.sjzc.student.uiFragment.MainTabActivity"
-            android:screenOrientation="portrait" />
+        <!--<activity-->
+            <!--android:name="cn.edu.sjzc.student.uiFragment.MainTabActivity"-->
+            <!--android:screenOrientation="portrait" />-->
         <activity
             android:name="cn.edu.sjzc.student.uiActivity.SignActivity"
             android:screenOrientation="portrait" />
