--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:name="cn.edu.sjzc.student.permission.JPUSH_MESSAGE"
         android:protectionLevel="signature" />
 
-    <!-- Required  一些系统要求的权限，如访问网络等-->
+    <!-- Required  一些系统要求的权限，如访问网络等 -->
     <uses-permission android:name="cn.edu.sjzc.student.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,7 +20,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <!-- Optional for location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -30,7 +30,7 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
-    <!--sharedsdk分享需要的权限-->
+    <!-- sharedsdk分享需要的权限 -->
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -53,12 +53,13 @@
     <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- 拨号权限 -->
     <android:uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="cn.edu.sjzc.student.uiFragment.MainTabActivity"
+            android:name=".uiActivity.LoginDemoActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,26 +68,25 @@
             </intent-filter>
         </activity>
 
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:configChanges="orientation|keyboardHidden" >
+            android:configChanges="orientation|keyboardHidden"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
             <intent-filter>
                 <action android:name="cn.jpush.android.ui.PushActivity" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="cn.edu.sjzc.student" />
             </intent-filter>
         </activity>
-        <!-- Required  SDK核心功能-->
+        <!-- Required  SDK核心功能 -->
         <service
             android:name="cn.jpush.android.service.DownloadService"
             android:enabled="true"
-            android:exported="false" >
-        </service>
+            android:exported="false"></service>
 
-
-        <!-- Required SDK 核心功能-->
+        <!-- Required SDK 核心功能 -->
         <service
             android:name="cn.jpush.android.service.PushService"
             android:enabled="true"
@@ -96,16 +96,16 @@
                 <action android:name="cn.jpush.android.intent.REPORT" />
                 <action android:name="cn.jpush.android.intent.PushService" />
                 <action android:name="cn.jpush.android.intent.PUSH_TIME" />
-
             </intent-filter>
         </service>
 
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
         <receiver
             android:name="cn.jpush.android.service.PushReceiver"
-            android:enabled="true" >
+            android:enabled="true">
             <intent-filter android:priority="1000">
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />   <!--Required  显示通知栏 -->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />
+                <!-- Required  显示通知栏 -->
                 <category android:name="cn.edu.sjzc.student" />
             </intent-filter>
             <intent-filter>
@@ -116,148 +116,170 @@
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
+
                 <data android:scheme="package" />
             </intent-filter>
-
         </receiver>
 
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
         <receiver android:name="cn.jpush.android.service.AlarmReceiver" />
 
-        <!-- User defined.  For test only  用户自定义的广播接收器-->
+        <!-- User defined.  For test only  用户自定义的广播接收器 -->
         <receiver
-            android:name="cn.edu.sjzc.student.broadcasterceiver.JpushReceiver"
+            android:name=".broadcasterceiver.JpushReceiver"
             android:enabled="true">
             <intent-filter>
-                <action android:name="cn.jpush.android.intent.REGISTRATION" /> <!--Required  用户注册SDK的intent-->
+                <action android:name="cn.jpush.android.intent.REGISTRATION" />
+                <!-- Required  用户注册SDK的intent -->
                 <action android:name="cn.jpush.android.intent.UNREGISTRATION" />
-                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" /> <!--Required  用户接收SDK消息的intent-->
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" /> <!--Required  用户接收SDK通知栏信息的intent-->
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" /> <!--Required  用户打开自定义通知栏的intent-->
-                <action android:name="cn.jpush.android.intent.ACTION_RICHPUSH_CALLBACK" /> <!--Optional 用户接受Rich Push Javascript 回调函数的intent-->
-                <action android:name="cn.jpush.android.intent.CONNECTION" /><!-- 接收网络变化 连接/断开 since 1.6.3 -->
+                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" />
+                <!-- Required  用户接收SDK消息的intent -->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" />
+                <!-- Required  用户接收SDK通知栏信息的intent -->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" />
+                <!-- Required  用户打开自定义通知栏的intent -->
+                <action android:name="cn.jpush.android.intent.ACTION_RICHPUSH_CALLBACK" />
+                <!-- Optional 用户接受Rich Push Javascript 回调函数的intent -->
+                <action android:name="cn.jpush.android.intent.CONNECTION" />
+                <!-- 接收网络变化 连接/断开 since 1.6.3 -->
                 <category android:name="cn.edu.sjzc.student" />
             </intent-filter>
         </receiver>
 
-
         <!-- Required  . Enable it you can get statistics data with channel -->
-        <meta-data android:name="JPUSH_CHANNEL" android:value="developer-default"/>
-        <meta-data android:name="JPUSH_APPKEY" android:value="977274f9467ca27e1f08d9d6" /> <!--  </>值来自开发者平台取得的AppKey-->
+        <meta-data
+            android:name="JPUSH_CHANNEL"
+            android:value="developer-default" />
+        <meta-data
+            android:name="JPUSH_APPKEY"
+            android:value="977274f9467ca27e1f08d9d6" />
+        <!-- </>值来自开发者平台取得的AppKey -->
 
-        <!--分享必加-->
+
+        <!-- 分享必加 -->
         <activity
             android:name="cn.sharesdk.framework.ShareSDKUIShell"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <data android:scheme="tencent100371282" />
+
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <!--微信分享回调 -->
+        <!-- 微信分享回调 -->
         <activity
             android:name=".wxapi.WXEntryActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
+            android:name=".uiActivity.AppStartActivicy"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.AppStartActivicy"
-            android:screenOrientation="portrait" />
-        <!--<activity-->
-            <!--android:name="cn.edu.sjzc.student.uiFragment.MainTabActivity"-->
-            <!--android:screenOrientation="portrait" />-->
-        <activity
-            android:name="cn.edu.sjzc.student.uiActivity.SignActivity"
+            android:name="cn.edu.sjzc.student.uiFragment.MainTabActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.LoginActivity"
+            android:name=".uiActivity.SignActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.HomeNewsActivity"
+            android:name=".uiActivity.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.HomeInfoActivity"
+            android:name=".uiActivity.HomeNewsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.HomeExchangeActivity"
+            android:name=".uiActivity.HomeInfoActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.PerChangeInfoActivity"
+            android:name=".uiActivity.HomeExchangeActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.PerChangePasswordActivity"
+            android:name=".uiActivity.PerChangeInfoActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.PerPersonalInfoActivity"
+            android:name=".uiActivity.PerChangePasswordActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.PerScheduleActivity"
+            android:name=".uiActivity.PerPersonalInfoActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.TeacherRankingActivity"
+            android:name=".uiActivity.PerScheduleActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.MyRankingActivity"
+            android:name=".uiActivity.TeacherRankingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.AdvStudentInfoActivity"
+            android:name=".uiActivity.MyRankingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.FindTeacherActivity"
+            android:name=".uiActivity.AdvStudentInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".uiActivity.FindTeacherActivity"
             android:label="@string/title_activity_find_teacher"
             android:screenOrientation="portrait" />
 
         <service
-            android:name="cn.edu.sjzc.student.service.ConfirmSoundService"
+            android:name=".service.ConfirmSoundService"
             android:exported="true" />
         <service
-            android:name="cn.edu.sjzc.student.service.ExitSoundService"
+            android:name=".service.ExitSoundService"
             android:exported="true" />
         <service
-            android:name="cn.edu.sjzc.student.service.LowBatterySoundService"
+            android:name=".service.LowBatterySoundService"
             android:exported="true" />
 
-        <receiver android:name="cn.edu.sjzc.student.broadcasterceiver.SoundBroadCasteReceiver" />
+        <receiver android:name=".broadcasterceiver.SoundBroadCasteReceiver" />
 
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.CourseActivity"
+            android:name=".uiActivity.CourseActivity"
             android:label="@string/title_activity_course"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.MyRankingInfoActivity"
+            android:name=".uiActivity.MyRankingInfoActivity"
             android:label="@string/title_activity_my_ranking_info"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.TeacherRankingInfoActivity"
+            android:name=".uiActivity.TeacherRankingInfoActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.RetroactionActivity"
-            android:label="@string/title_activity_retroaction" />
+            android:name=".uiActivity.RetroactionActivity"
+            android:label="@string/title_activity_retroaction"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.SearchInfoActivity"
-            android:label="@string/title_activity_search_info" />
+            android:name=".uiActivity.SearchInfoActivity"
+            android:label="@string/title_activity_search_info"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.AboutActivity"
-            android:label="@string/title_activity_about" />
+            android:name=".uiActivity.AboutActivity"
+            android:label="@string/title_activity_about"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="cn.edu.sjzc.student.uiActivity.EvealuationActivity"
-            android:label="@string/title_activity_evealuation"></activity>
+            android:name=".uiActivity.EvealuationActivity"
+            android:label="@string/title_activity_evealuation"
+            android:screenOrientation="portrait" />
         <!-- For test only 测试状态通知栏，需要打开的Activity -->
-        <activity android:name="cn.edu.sjzc.student.uiActivity.TestActivity" >
+        <activity android:name=".uiActivity.TestActivity">
             <intent-filter>
                 <action android:name="jpush.testAction" />
+
                 <category android:name="jpush.testCategory" />
             </intent-filter>
         </activity>
-
-
+        <activity
+            android:name=".uiActivity.AdviceTeacherActivity"
+            android:label="@string/title_activity_advice_teacher"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".uiActivity.AdviceCourseActivity"
+            android:label="@string/title_activity_advice_course"></activity>
     </application>
 
 </manifest>
