--- a/app/src/main/assets/fanyafeng.properties
+++ b/app/src/main/assets/fanyafeng.properties
@@ -1,3 +1,3 @@
 
-ServerUrl=http://192.168.253.2:8080/st/
-#http://172.16.238.8:8080
+#ServerUrl=http://192.168.116.197:8080/st/
+ServerUrl=http://172.17.1.89:8080/st/
